--- a/MM856 - Grafteori/Ordbog.tex
+++ b/MM856 - Grafteori/Ordbog.tex
@@ -22,6 +22,7 @@ Ordbogen kommer i rækkefølge fra hvornår jeg har brugt dem. Man kan ikke regn
   adjacent vertices & naboknuder\footnote{vi bruger ikke \textit{adjacent} på dansk, kun nabo} \\
   neighbours & naboer \\
   null graph & den tomme graf \\
+  path & sti \\
   clique & klikke \\
   independent set & uafhængig mængde \\
   bipartite & todelelig \\
@@ -32,17 +33,22 @@ Ordbogen kommer i rækkefølge fra hvornår jeg har brugt dem. Man kan ikke regn
   connected & sammenhængende \\
   disconnected & usammenhængende \\
   isomorphism & isomorfi \\
-  loopless & løkkefri\footnote{egen oversætning}\\
+  loopless & løkkefri\footnote{egen oversætning\label{egen}}\\
   adjacency matrix & nabo-matrix \\
   incidence matrix & incidens-matrix \\
   incidence & incidens \\
   incident & incident \\
   degree & valens\footnote{\textit{grad} kan også bruges} \\
+  cycle & kreds \\
+  complete graph & komplet graf \\
+  biclique & biklikke\footref{egen}\\
+  self-complementary & selv-komplementær \footref{egen}\\
+  decomposition & nedbrydning \footref{egen}\\
 \end{longtable}
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-engine: xetex
+%%% TeX-engine: luatex
 %%% TeX-command-extra-options: "-shell-escape"
 %%% TeX-master: "main"
 %%% End:
