--- a/MM856 - Grafteori/Ordbog.tex
+++ b/MM856 - Grafteori/Ordbog.tex
@@ -44,6 +44,9 @@ Ordbogen kommer i rækkefølge fra hvornår jeg har brugt dem. Man kan ikke regn
   biclique & biklikke\footref{egen}\\
   self-complementary & selv-komplementær \footref{egen}\\
   decomposition & nedbrydning \footref{egen}\\
+  girth & omkreds \footref{egen}\\
+  automorphism & automorfi \footref{egen}\\
+  vertex-transitiv & knudetransitiv \footref{egen}\\
 \end{longtable}
 
 %%% Local Variables:
