--- a/preamble.tex
+++ b/preamble.tex
@@ -55,7 +55,7 @@
 
 \usepackage{tikz} % Til grafer
 \usetikzlibrary{automata} % Til automatgrafer
-\usetikzlibrary{graphs, graphdrawing}
+\usetikzlibrary{graphs, graphdrawing, graphs.standard}
 \usegdlibrary{force} % noget til grafer? chatgpt sagde jeg skulle tilføje det
 \usetikzlibrary{shapes} % Ellipse
 \usetikzlibrary{trees} % Til træstrukturer
