--- a/DM819 - Geometriske Algoritmer/Introduktion.tex
+++ b/DM819 - Geometriske Algoritmer/Introduktion.tex
@@ -1,5 +1,9 @@
 \chapter{Introduktion}
 
+Dette er noterne til kurset DM819 - Geometriske Algoritmer. Noterne vil være af både bogen og forelæsningerne. Derudover vil der være noter til opgaverne, samt løsninger.
+
+Grundet de \textit{mange} fantastiske illustrationer i bogen, er disse noter på ingen måde en erstatning. Kun de vigtigste illustrationer er taget med.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-engine: luatex
