--- a/DM819 - Geometriske Algoritmer/Ordbog.tex
+++ b/DM819 - Geometriske Algoritmer/Ordbog.tex
@@ -1,5 +1,12 @@
 \chapter{Ordbog}
 
+Ordbogen kommer i rækkefølge fra hvornår jeg har brugt dem. Man kan ikke regne med at de er i samme rækkefølge som noterne, da jeg kan være gået tilbage og har fjernet/tilføjet tekst.
+
+\begin{longtable}[c]{ll}
+  \textbf{Engelsk} & \textbf{Dansk} \\ \hline \endfirsthead \endhead
+  computational geometry & geometriske algoritmer \\
+  convex hull & konveks skrog\footnote{deepl.com er brugt til oversætningen}\\
+\end{longtable}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-engine: luatex
