--- a/MM856 - Grafteori/Ordbog.tex
+++ b/MM856 - Grafteori/Ordbog.tex
@@ -47,6 +47,9 @@ Ordbogen kommer i rækkefølge fra hvornår jeg har brugt dem. Man kan ikke regn
   girth & omkreds \footref{egen}\\
   automorphism & automorfi \footref{egen}\\
   vertex-transitiv & knudetransitiv \footref{egen}\\
+  trail & tur \\
+  walk & vandring \\
+  $u$ is connected to $v$ & $u$ er forbundet til $v$ \footref{egen}\\
 \end{longtable}
 
 %%% Local Variables:
